--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "file-url": "^3.0.0",
     "is-url": "^1.2.4",
-    "puppeteer": "^2.0.0",
+    "puppeteer": "^2.1.1",
+    "puppeteer-extra": "^3.1.15",
+    "puppeteer-extra-plugin-flash": "^2.2.8",
+    "puppeteer-extra-plugin-user-data-dir": "^2.2.7",
+    "puppeteer-extra-plugin-user-preferences": "^2.2.7",
     "url-parse": "^1.4.7",
     "yargs": "^13.3.0"
   }
